# Rich_Simplified

./: Installation of Opticks.md  Mychanges.cc  README.md  complier.md  failed_tests.md  geant4.md  info.md
Rich_Simplified/: CMakeLists.txt  README.md  Rich_Simplified.cc  TBuf_.cu  TimeTest.cc  build.sh  plotHits.C  plotHits.py  plotHits_3D.py
Rich_Simplified/InputData/: EffJuraOpt_upgradeDummy.txt  EffJuraThr7.txt  EffSaleveOpt.txt  EffSaleveOpt_upgradeDummy.txt  EffSaleveTop100.txt  Mirror_D200mm_240906.txt  Mirror_D200mm_dummyUpTo800nm.txt
Rich_Simplified/include/: Ctx.hh  L4Cerenkov.hh  LayerTecMaterialParameters.hh  PhysicsList.hh  PmtAnodeEnergyLoss.hh  PmtPhotoElectricEffect.hh  RichTbBeamGeometryParameters.hh  RichTbContainerVesselBox.hh  RichTbCounter.hh  RichTbCrystalCoverGeometryParameters.hh  RichTbExtHpdGeometryParameters.hh  RichTbG4OpAbsorption.hh  RichTbG4OpRayleigh.hh  RichTbGeometryParameters.hh  RichTbGraphics.hh  RichTbGraphicsAuxA.hh  RichTbGraphicsLbR.hh  RichTbHpdGeometryParameters.hh  RichTbHpdRODummySD.hh  RichTbHpdSupportFrameGeometryParameters.hh  RichTbLHCbECModuleGeometryParameters.hh  RichTbLHCbExptHall.hh  RichTbLHCbExptHallGeometryParameters.hh  RichTbLHCbPmtArrayGeometryParameters.hh  RichTbLHCbPmtGeometryParameters.hh  RichTbLHCbR1EC.hh  RichTbLHCbR1FlatMirror.hh  RichTbLHCbR1MagShRegion.hh  RichTbLHCbR1MagShRegionGeometryParameters.hh  RichTbLHCbR1Module.hh  RichTbLHCbR1PhDetSupFrame.hh  RichTbLHCbR1PhDetSupFrameGeometryParameters.hh  RichTbLHCbR1Pmt.hh  RichTbLHCbR1PmtComponents.hh  RichTbLHCbR1QW.hh  RichTbLHCbR1SphMirror.hh  (+45 more)
(+160 files in other folders)
